# odrive_lib

./: .gitignore  CLAUDE.md  README.md
docs/superpowers/plans/: 2026-07-20-odrive-c-can-library.md  2026-07-20-odrtune-python-tool.md  2026-07-21-odrtune-review-fix-plan.md  2026-07-23-cleanup-periodic-rates-logger.md
docs/superpowers/specs/: 2026-07-20-odrive-library-and-tuning-tool-design.md  2026-07-23-cleanup-periodic-rates-logger-design.md
examples/: stm32_fdcan_canbus_wrapper.c
include/: odrive.h  odrive_endpoints_0_6.h  odrive_protocol.h
src/: odrive_comm.c  odrive_control.c  odrive_endpoints_0_6.c  odrive_feedback.c  odrive_periodic.c  odrive_setpoints.c
test/: fake_endpoints.c  run.sh  smoke.c
tools/: README.md  gen_endpoints.py
tools/odrtune/: CLAUDE.md  README.md  __main__.py  pyproject.toml  requirements.txt
tools/odrtune/core/: calibration.py  capture.py  config_io.py  device.py  sampler.py  settings.py  step_response.py
tools/odrtune/odrtune/: __init__.py  __main__.py
tools/odrtune/odrtune/core/: calibration.py  config_io.py  sampler.py  step_response.py
tools/odrtune/odrtune/ui/: calibration_panel.py  config_panel.py  connect_panel.py  main_window.py  plots_panel.py  tuning_panel.py
tools/odrtune/tests/: fake_odrive.py  test_calibration.py  test_config_io.py  test_device.py  test_sampler.py  test_step_response.py  test_ui_smoke.py
tools/odrtune/ui/: calibration_panel.py  capture_panel.py  config_panel.py  connect_panel.py  control_panel.py  main_window.py  plots_column.py  plots_panel.py  time_plot.py  top_panel.py  tuning_panel.py
