[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "odrtune"
version = "0.1.0"
description = "USB debugging and tuning GUI for ODrive Pro/S1 (fw 0.6.x)"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "pyqtgraph>=0.13",
    "odrive>=0.6.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
odrtune = "odrtune.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["odrtune*"]
